--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/cli": "^4.1.4",
     "electron-store": "^10.0.1",
+    "googleapis": "^148.0.0",
     "node-schedule": "^2.1.1",
     "tailwindcss": "^4.1.4"
   },
