--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/cli": "^4.1.4",
     "electron-store": "^10.0.1",
     "express": "^5.1.0",
+    "google-auth-library": "^9.15.1",
     "googleapis": "^148.0.0",
     "node-schedule": "^2.1.1",
     "open": "^8.4.2",
