--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/cli": "^4.1.4",
+    "dotenv": "^16.5.0",
     "electron-store": "^10.0.1",
     "express": "^5.1.0",
     "google-auth-library": "^9.15.1",
